no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-06-09 08:46:25 24.6.9
qc pass: unnamed
---------------------------------- 2024-06-09 09:27:23 24.6.9
no qc pass: unnamed
---------------------------------- 2024-06-09 12:08:32 24.6.9
qc pass: cross connect tunnel interfaces
qc pass: p4lang: gre local connect
---------------------------------- 2024-06-09 18:57:15 24.6.9
qc pass: cross connect different tunnel interfaces
qc pass: p4lang: gre multicast routing
---------------------------------- 2024-06-19 09:28:02 24.6.19
no qc pass: dhcp with excluded address
failed: dhcp with excluded address
---------------------------------- 2024-06-19 09:56:58 24.6.19
no failed: dhcp with excluded address
qc pass: dhcp with excluded address
---------------------------------- 2024-06-26 19:29:32 24.6.26
no todo: server http / host * searchbar
no todo: server http / host * custom-remote >path/file>
no todo: server http / host * custom-local <text>
no todo: server http / host * webring-remote <path/file*>
no todo: server http / host * webring-local <text>
---------------------------------- 2024-06-26 20:36:39 24.6.26
no todo: server http / host * user-agent matcher with redirect
---------------------------------- 2024-06-26 21:52:46 24.6.26
no todo: cmds.not2vdc  <!----------------------------------------------------------------------------------
no todo: client hide-secrets  <!------------------------------------------------------------------------
no todo: "no " --> cmds.negated   <!--------------------------------------------------------------------
no todo: "no" --> cmds.negated   <!---------------------------------------------------------------------
no todo: ("no") --> cmds.negated   <!-------------------------------------------------------------------
no todo: some more .equals("no") to cmds.negated conversions like   <!-------------------------------------