@@ -15788,3 +15788,5 @@ no todo: "no " --> cmds.negated   <!--------------------------------------------
 no todo: "no" --> cmds.negated   <!---------------------------------------------------------------------
 no todo: ("no") --> cmds.negated   <!-------------------------------------------------------------------
 no todo: some more .equals("no") to cmds.negated conversions like   <!-------------------------------------
+---------------------------------- 2024-06-26 22:21:00 24.6.26
+no todo: scheduler asdf single-run as no respawn or something
